get single task, update one and delete one

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -176,7 +176,9 @@ h3 {
   background: darkred;
   border: none;
 }
-
+.btn-update {
+  background: #2a397c;
+}
 .btn-back {
   width: 150px;
   margin-bottom: 20px;
