--- a/frontend/src/components/header.module.css
+++ b/frontend/src/components/header.module.css
@@ -37,3 +37,34 @@
     margin-right: 5px;
   }
   
+  .user {
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+  }
+
+
+
+  .header img {
+    width: 4rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
+
+  .logout {
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    color: var(--color-grey-light-1);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+
+  .logout:hover {
+    color: #777;
+  }
+  
+  .logout svg {
+    margin-right: 5px;
+  }
