--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
 :root {
-  --color-primary: #c69963;
+  --color-primary: rgb(198, 153, 99);
   --color-primary-dark: #b28451;
   --color-secondary: #101d2c;
 
@@ -49,8 +49,8 @@ ul {
 .container {
   max-width: 120rem;
   width: 100%;
-  width: 100%;
-  margin: 0 auto;
+  min-height: 70vh;
+  margin: 8rem auto;
   padding: 0 2rem;
 }
 /* 
@@ -123,15 +123,15 @@ ul {
   color: #777;
 }
 
-.form {
-  width: 70%;
+/* .form {
+  width: 60%;
   margin: 0 auto;
-}
+} */
 
-.form-group {
-  margin-bottom: 10px;
-}
-
+/* .form-group {
+  margin-bottom: 2rem;
+} */
+/* 
 .form-group input,
 .form-group textarea,
 .form-group select {
@@ -147,27 +147,9 @@ ul {
   text-align: left;
   display: block;
   margin: 0 0 5px 3px;
-}
+} */
 
-.btn {
-  padding: 10px 20px;
-  border: 1px solid #000;
-  border-radius: 5px;
-  background: #000;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 700;
-  cursor: pointer;
-  text-align: center;
-  appearance: button;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
-.btn svg {
-  margin-right: 8px;
-}
 
 .btn-reverse {
   background: #fff;
