--- a/frontend/src/pages/register.module.css
+++ b/frontend/src/pages/register.module.css
@@ -1,12 +1,92 @@
 .register {
-    min-height: 90vh;
-    background-color: var(--color-secondary);
-    text-align: center;
+  min-height: 90vh;
+  background-color: var(--color-secondary);
+  text-align: center;
 }
 
 .register h1 {
-    font-size: 4.5rem;
-    padding: 6rem;
-    color: var(--color-primary-dark);
-    text-transform: uppercase;
+  font-size: 4.5rem;
+  padding: 6rem;
+  color: var(--color-primary-dark);
+  text-transform: uppercase;
 }
+
+.form {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.form-group {
+  margin-bottom: 2rem;
+}
+
+.form-group input,
+.form-group textarea,
+.form-group select {
+  width: 100%;
+  font-size: 1.5rem;
+  padding: 10px;
+  border: none;
+  background-color: var(--color-grey-light-1);
+  border-radius: 2px;
+  color: var(--color-grey-dark-1);
+  border-bottom: 4px solid transparent;
+  display: block;
+  transition: all 0.3s;
+}
+.form-group input:focus {
+  outline: none;
+  border-bottom: 4px solid var(--color-primary);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
+}
+.form-group select {
+  margin-bottom: 4rem;
+}
+.form-group select:focus {
+    outline: none;
+}
+.form-group input::-webkit-input-placeholder {
+  color: var(--color-primary-dark);
+}
+.form-group input:focus:invalid {
+  border-bottom: 4px solid #a86c6c;
+}
+.form-group label {
+  text-align: left;
+  display: block;
+  font-size: 1.5rem;
+  font-weight: 700;
+  /* margin-top: 1rem; */
+  margin: 0.7rem 0 0 0.8rem;
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: all 0.5s ease;
+  color: var(--color-primary-dark);
+}
+input:placeholder-shown + label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4.6rem);
+}
+
+.btn {
+    padding: 10px 20px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    background: var(--color-primary-dark);
+    width: 100%;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 700;
+    cursor: pointer;
+    text-align: center;
+    appearance: button;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .btn:hover {
+    transform: scale(0.98);
+  }
