--- a/frontend/src/components/header.module.css
+++ b/frontend/src/components/header.module.css
@@ -10,7 +10,6 @@
     color: var(--color-grey-light-1);
     box-shadow: var(--shadow);
     position: relative;
-    
   }
   
   .header ul {
@@ -20,13 +19,12 @@
   }
   
   .header ul li {
-    margin-left: 20px;
+    margin-left: 3rem;
   }
   
   .header ul li a {
     display: flex;
     align-items: center;
-    
   }
   
   .header ul li a:hover {
@@ -47,8 +45,9 @@
 
   .header img {
     width: 4rem;
-    border-radius: 50%;
-    margin-right: 1rem;
+    border-radius: 30%;
+    margin-right: .7rem;
+    border: 2px solid var(--color-primary);
   }
 
   .logout {
