--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -205,7 +205,7 @@ ul {
   font-size: 1.3rem;
 }
 
-.ticket,
+/* .ticket,
 .ticket-headings {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -217,21 +217,16 @@ ul {
   padding: 10px 15px;
   border-radius: 5px;
   text-align: center;
-}
+} */
 
-.ticket-headings {
+/* .ticket-headings {
   font-weight: 700;
-}
+} */
 
-.status {
-  background-color: #333;
-  color: #fff;
-  width: 100px;
-  padding: 0 20px;
+/* .status {
+  width: 60%;
   justify-self: center;
-  border-radius: 10px;
-  font-size: 16px;
-  text-align: center;
+  font-weight: 500;
 }
 
 .status-new {
@@ -255,11 +250,11 @@ ul {
   background-color: darkred;
   color: #fff;
   border-radius: 10px;
-}
+} */
 
 .ticket-page {
   position: relative;
-  text-align: left;
+  text-align: right;
 }
 
 .ticket-page h2 {
@@ -410,6 +405,10 @@ footer {
 
 @media (max-width: 600px) {
   .boxes {
+    grid-template-columns: 1fr;
+  }
+
+  .task, .task-title {
     grid-template-columns: 1fr;
   }
 
