--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@
 
   --color-grey-light-1: #f9f7f6;
   --color-grey-light-2: #aaa;
+  --color-grey-light-3: rgb(195, 195, 195);
 
   --color-grey-dark-1: #54483a;
   --color-grey-dark-2: #6d5d4b;
@@ -39,7 +40,7 @@ a {
 }
 
 p {
-  line-height: 1.7;
+  line-height: 1.9;
 }
 
 ul {
@@ -150,7 +151,7 @@ ul {
 } */
 
 
-
+/* 
 .btn-reverse {
   background: #fff;
   color: #000;
@@ -180,9 +181,9 @@ ul {
 
 .btn:hover {
   transform: scale(0.98);
-}
+} */
 
-.ticket-created {
+/* .ticket-created {
   border: 1px solid #e6e6e6;
   border-radius: 5px;
   padding: 50px;
@@ -203,7 +204,7 @@ ul {
 
 .ticket-info {
   font-size: 1.3rem;
-}
+} */
 
 /* .ticket,
 .ticket-headings {
@@ -252,12 +253,12 @@ ul {
   border-radius: 10px;
 } */
 
-.ticket-page {
+/* .ticket-page {
   position: relative;
   text-align: right;
-}
+} */
 
-.ticket-page h2 {
+/* .ticket-page h2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -275,46 +276,45 @@ ul {
 .ticket-desc {
   margin: 20px 0;
   font-size: 17px;
-  background-color: #f4f4f4;
   border: 1px #ccc solid;
   padding: 10px 15px;
   border-radius: 5px;
-}
+} */
 
-.note {
+/* .note {
   border: 1px solid #e6e6e6;
   border-radius: 5px;
   text-align: left;
   padding: 20px;
   margin-bottom: 20px;
   position: relative;
-}
+} */
 
-.note-head {
+/* .note-head {
   background: #f4f4f4;
   padding: 5px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-}
+} */
 
-.note-date {
+/* .note-date {
   position: absolute;
   top: 15px;
   right: 10px;
   font-size: 14px;
-}
+} */
 
-.note-checked {
+/* .note-checked {
   position: absolute;
   bottom: 10px;
   right: 30px;
 
   cursor: pointer;
-}
+} */
 
-.note-checked button {
+/* .note-checked button {
   color: #fff;
   padding: 5px 15px;
   font-size: 12px;
@@ -324,47 +324,34 @@ ul {
 
 .note-checked a:visited {
   display: none;
-}
+} */
 
-.delete-note {
+/* .delete-note {
   color: red;
   cursor: pointer;
   position: absolute;
   bottom: 10px;
   right: 20px;
-}
+} */
 
-.btn-close {
+/* .btn-close {
   background: none;
   border: none;
   color: #000;
   position: absolute;
-  top: 5px;
-  right: 5px;
-  font-size: 16px;
+  top: 1.5rem;
+  right: 1.5rem;
+  font-size: 1.6rem;
+  font-weight: bold;
   cursor: pointer;
+  color: var(--color-primary-dark);
 }
 
 .btn-close:hover {
-  color: red;
+  color: var(--color-secondary);
   transform: scale(0.98);
-}
+} */
 
-p.status-in-progress {
-  color: orangered;
-}
-
-p.status-waiting {
-  color: red;
-}
-
-p.status-ready {
-  color: steelblue;
-}
-
-p.status-complete {
-  color: green;
-}
 
 footer {
   position: sticky;
