--- a/frontend/src/pages/task.module.css
+++ b/frontend/src/pages/task.module.css
@@ -1,39 +1,177 @@
 .task-page {
-    min-height: 70rem;
-    background-color: var(--color-secondary);
-    padding: 8rem;
-    color: var(--color-grey-light-1);
+  min-height: 70rem;
+  background-color: var(--color-secondary);
+  padding: 4rem 8rem;
+  color: var(--color-grey-light-1);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  position: relative;
+  text-align: left;
+}
+
+.task-page h1 {
+  color: var(--color-primary-dark);
+  display: flex;
+  align-items: center;
+  
+}
+
+.task-page h1 span {
+  color: var(--color-grey-light-1);
+  font-weight: 500;
+  text-align: center;
+  margin-left: 2rem;
+}
+
+.task {
+  grid-column: 1/2;
+}
+
+.task-desc {
+  grid-column: 1/3;
+  margin: 20px 0;
+  font-size: 17px;
+  border: 1px #ccc solid;
+  padding: 10px 15px;
+  border-radius: 5px;
+  color: var(--color-primary-dark);
+  text-align: center;
+}
+.task-desc p {
+  text-align: left;
+  color: var(--color-grey-light-1);
+  
+}
+.notes-body {
+  grid-column: 1/3;
 }
 
 .btn {
-    padding: 10px 20px;
-    border: 1px solid #000;
-    border-radius: 5px;
-    background: var(--color-primary-dark);
-    width: 100%;
-    color: #fff;
-    font-size: 16px;
-    font-weight: 700;
-    cursor: pointer;
-    text-align: center;
-    appearance: button;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  padding: 10px 20px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  background: var(--color-primary-dark);
+  width: 100%;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+  cursor: pointer;
+  text-align: center;
+  appearance: button;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .btn-sm {
-    padding: .8rem 1rem;
-    font-size: 13px;
-    width: 10%;
-    background-color: var(--color-grey-light-1);
-    color: var(--color-secondary);
-    margin: 2rem 0;
-    font-weight: lighter;
-  }
-  .btn svg {
-      margin-right: .3rem;
-  }
-  .btn:hover {
-    transform: scale(0.98);
-  }
+.btn-sm {
+  grid-column: 1/3;
+  padding: 0.8rem 1rem;
+  font-size: 13px;
+  width: 10%;
+  background-color: var(--color-grey-light-1);
+  color: var(--color-secondary);
+  margin: 2rem 0;
+  font-weight: lighter;
+  height: 30%;
+}
+.btn svg {
+  margin-right: 0.3rem;
+}
+.btn:hover {
+  transform: scale(0.98);
+}
+.btn-update,
+.btn-delete {
+  width: 70%;
+  height: 80%;
+  justify-self: center;
+}
+.btn-delete {
+  background-color: white;
+  color: red;
+}
+
+.btn-modal {
+  width: 30%;
+  border: none;
+  margin-top: 2rem;
+}
+.btn-close {
+  background: none;
+  border: none;
+  color: #000;
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  font-size: 1.6rem;
+  font-weight: bold;
+  cursor: pointer;
+  color: var(--color-primary-dark);
+}
+.btn-close:hover {
+  color: var(--color-secondary);
+  transform: scale(0.98);
+}
+.status {
+  width: 60%;
+  justify-self: center;
+  font-weight: 500;
+}
+
+.status-new {
+  background-color: green;
+  color: #fff;
+}
+
+.status-Progress {
+  background-color: steelblue;
+  color: #fff;
+}
+
+.status-started {
+  background-color: rosybrown;
+  color: #fff;
+}
+.status-finished {
+  background-color: darkred;
+  color: #fff;
+}
+/* textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  font-family: inherit;
+} */
+.form-group textarea {
+  width: 100%;
+  font-size: 1.5rem;
+  padding: 10px;
+  border: 1px solid var(--color-primary-dark);
+  background-color: var(--color-grey-light-1);
+  border-radius: 2px;
+  color: var(--color-grey-dark-1);
+  display: block;
+  transition: all 0.5s;
+}
+.form-group textarea:focus {
+  outline: none;
+  color: var(--color-primary-dark);
+  border: 1px solid var(--color-secondary);
+}
+
+
+.form-group textarea::-webkit-input-placeholder {
+  color: var(--color-primary-dark);
+}
+
+.form-group label {
+  text-align: left;
+  display: block;
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+  color: var(--color-primary-dark);
+}
+
