--- a/frontend/src/components/memberItem.module.css
+++ b/frontend/src/components/memberItem.module.css
@@ -19,7 +19,7 @@
   font-weight: 400;
   font-size: 1.6rem;
   color: var(--color-grey-light-1);
-  margin-bottom: -13px;
+  margin-bottom: -1.3rem;
 }
 
 .member p {
