--- a/frontend/src/components/noteItem.module.css
+++ b/frontend/src/components/noteItem.module.css
@@ -18,6 +18,7 @@
 .note p {
   font-size: 1.2rem;
   grid-column: 1/5;
+  
 }
 
 .note-date {
@@ -33,4 +34,9 @@
   border: none;
   color: var(--color-grey-light-1);
   padding: 0.5rem;
+  cursor: pointer;
+}
+
+.btn-checked:hover {
+  transform: scale(.95);
 }
