--- a/frontend/src/pages/task.module.css
+++ b/frontend/src/pages/task.module.css
@@ -7,13 +7,13 @@
   grid-template-columns: repeat(2, 1fr);
   position: relative;
   text-align: left;
+  grid-gap: 2rem;
 }
 
 .task-page h1 {
   color: var(--color-primary-dark);
   display: flex;
   align-items: center;
-  
 }
 
 .task-page h1 span {
@@ -40,7 +40,6 @@
 .task-desc p {
   text-align: left;
   color: var(--color-grey-light-1);
-  
 }
 .notes-body {
   grid-column: 1/3;
@@ -70,7 +69,6 @@
   width: 10%;
   background-color: var(--color-grey-light-1);
   color: var(--color-secondary);
-  margin: 2rem 0;
   font-weight: lighter;
   height: 30%;
 }
@@ -136,14 +134,7 @@
   background-color: darkred;
   color: #fff;
 }
-/* textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #e6e6e6;
-  border-radius: 5px;
-  margin-bottom: 10px;
-  font-family: inherit;
-} */
+
 .form-group textarea {
   width: 100%;
   font-size: 1.5rem;
@@ -161,7 +152,6 @@
   border: 1px solid var(--color-secondary);
 }
 
-
 .form-group textarea::-webkit-input-placeholder {
   color: var(--color-primary-dark);
 }
@@ -174,4 +164,3 @@
   margin-bottom: 2rem;
   color: var(--color-primary-dark);
 }
-
