--- a/frontend/src/pages/home.module.css
+++ b/frontend/src/pages/home.module.css
@@ -25,6 +25,7 @@
   font-size: 1.8rem;
   color: var(--color-primary);
   text-transform: uppercase;
+  margin-bottom: 2rem;
 }
 .heading-left h1,
 .heading-right h1 {
@@ -68,17 +69,21 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-
   text-align: center;
   padding: 1rem;
 }
 .heading-right .members {
- display: flex;
- flex-wrap: wrap;
- margin: 1rem 2rem 2rem 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1rem 2rem 2rem 2rem;
 }
 .heading-right h1 {
   color: var(--color-primary);
- margin: 2rem 0;
+  margin: 2rem 0;
   text-transform: uppercase;
+}
+
+@media (max-width: 600px) {
+  
+  
 }
