--- a/frontend/src/pages/profile.module.css
+++ b/frontend/src/pages/profile.module.css
@@ -17,19 +17,25 @@
 .member-details h3 {
     display: flex;
     justify-content: start;
+    font-weight: lighter;
 }
 
 .member-details span {
 color: var(--color-primary);
 margin: 0 1rem 2rem 0;
 display: block;
+font-weight: bold;
+margin-right: 2rem;
 }
 .member-image {
     height: 25rem;
+    margin: 4rem;
 }
 
 .member-image img {
     height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 .tasks {
@@ -59,8 +65,28 @@ display: block;
     background-color: var(--color-grey-light-1);
     color: var(--color-primary-dark);;
 }
-
-
   .btn svg {
     margin-right: 8px;
+  }
+@media (max-width: 900px) {
+    .heading {
+        height: 100vh;
+    }
+}
+  @media (max-width:600px) {
+    .heading {
+        min-width: 40rem;
+    }
+      h3 {
+          font-size: 2.5rem;
+      }
+      .tasks {
+          flex-direction: column;
+          align-items: center;
+          margin-top: 1rem;
+      }
+      .btn {
+          margin-bottom: 3rem;
+          width: 80%;
+      }
   }
