--- a/frontend/src/pages/task.module.css
+++ b/frontend/src/pages/task.module.css
@@ -8,6 +8,7 @@
   position: relative;
   text-align: left;
   grid-gap: 2rem;
+  align-items: center;
 }
 
 .task-page h1 {
@@ -64,13 +65,13 @@
 
 .btn-sm {
   grid-column: 1/3;
-  padding: 0.8rem 1rem;
+  padding: 1rem 1.8rem;
   font-size: 13px;
-  width: 10%;
+  width: 20%;
   background-color: var(--color-grey-light-1);
   color: var(--color-secondary);
   font-weight: lighter;
-  height: 30%;
+  height: 100%;
 }
 .btn svg {
   margin-right: 0.3rem;
@@ -81,7 +82,7 @@
 .btn-update,
 .btn-delete {
   width: 70%;
-  height: 80%;
+  height: 100%;
   justify-self: center;
 }
 .btn-delete {
@@ -163,4 +164,28 @@
   font-weight: 700;
   margin-bottom: 2rem;
   color: var(--color-primary-dark);
+}
+
+@media (max-width: 1100px) {
+ 
+  .task-page h1 {
+    grid-column: 1/-1;
+  }
+
+}
+@media (max-width: 900px) {
+  .task-page {
+    padding: 2rem;
+    min-width: 40rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .btn-update, .btn-delete {
+    grid-column: 1/-1;
+  }
+  .btn-sm {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
