--- a/frontend/src/pages/task.module.css
+++ b/frontend/src/pages/task.module.css
@@ -41,6 +41,7 @@
 .task-desc p {
   text-align: left;
   color: var(--color-grey-light-1);
+  margin-top: 2rem;
 }
 .notes-body {
   grid-column: 1/3;
@@ -167,11 +168,9 @@
 }
 
 @media (max-width: 1100px) {
- 
   .task-page h1 {
     grid-column: 1/-1;
   }
-
 }
 @media (max-width: 900px) {
   .task-page {
@@ -181,7 +180,8 @@
 }
 
 @media (max-width: 600px) {
-  .btn-update, .btn-delete {
+  .btn-update,
+  .btn-delete {
     grid-column: 1/-1;
   }
   .btn-sm {
