--- a/frontend/src/pages/tasks.module.css
+++ b/frontend/src/pages/tasks.module.css
@@ -1,110 +1,110 @@
 .tasks {
-    min-height: 70rem;
-    background-color: var(--color-secondary);
-    padding: 8rem;
-    color: var(--color-grey-light-1);
+  min-height: 70rem;
+  background-color: var(--color-secondary);
+  padding: 8rem;
+  color: var(--color-grey-light-1);
 }
 
 .tasks-heading {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 2rem;
 }
 
 .tasks-heading h1 {
-    color: var(--color-primary);
-    font-size: 3rem;
+  color: var(--color-primary);
+  font-size: 3rem;
 }
 
 .task,
 .tasks-title {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2rem;
-    background: var(--color-grey-light-3);
-    padding: 1rem 1.5rem;
-    border-radius: .5rem;
-    text-align: center;
-    color: var(--color-secondary);
-    font-size: 1.8rem;
-    font-weight: 700;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
+  background: var(--color-grey-light-3);
+  padding: 1rem 1.5rem;
+  border-radius: 0.5rem;
+  text-align: center;
+  color: var(--color-secondary);
+  font-size: 1.8rem;
+  font-weight: 700;
 }
 
 .task {
-    font-size: 1.6rem;
-    font-weight: 500;
+  font-size: 1.6rem;
+  font-weight: 500;
 }
 
 .btn {
-    padding: .8rem 2rem;
-    border: 1px solid #000;
-    border-radius: 5px;
-    background: var(--color-primary-dark);
-    color: #fff;
-    font-size: 1.6rem;
-    cursor: pointer;
-    text-align: center;
-    appearance: button;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    border: none;
-  }
+  padding: 0.8rem 2rem;
+  border: 1px solid #000;
+  border-radius: 5px;
+  background: var(--color-primary-dark);
+  color: #fff;
+  font-size: 1.6rem;
+  cursor: pointer;
+  text-align: center;
+  appearance: button;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  border: none;
+}
 
-  .btn:hover {
-      transform: scale(.98);
-  }
+.btn:hover {
+  transform: scale(0.98);
+}
 
-  .status {
-    width: 60%;
-    justify-self: center;
-    font-weight: 500;
-   
-  }
-  
-  .status-new {
-    background-color: green;
-    color: #fff;
-  }
-  
-  .status-Progress {
-    background-color: steelblue;
-    color: #fff;
-  }
-  
-  .status-started {
-    background-color: rosybrown;
-    color: #fff;
-  }
-  .status-finished {
-    background-color: darkred;
-    color: #fff;
-  }
+.status {
+  width: 60%;
+  justify-self: center;
+  font-weight: 500;
+}
 
-  @media (max-width:900px) {
-    .tasks {
-      padding: 4rem 1rem;
-      height: 100vh;
-    }
+.status-new {
+  background-color: green;
+  color: #fff;
+}
+
+.status-Progress {
+  background-color: steelblue;
+  color: #fff;
+}
+
+.status-started {
+  background-color: rosybrown;
+  color: #fff;
+}
+.status-finished {
+  background-color: darkred;
+  color: #fff;
+}
+
+@media (max-width: 900px) {
+  .tasks {
+    padding: 4rem 1rem;
+    height: 100vh;
   }
-  @media (max-width:600px) {
-    .tasks {
-      padding: 2rem 0rem;
-      min-width: 40rem;
-    }
-    .tasks-heading {
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    .tasks-heading h1  {
-      margin-top: 2rem;
-    }
-    .task, .tasks-title {
-      border-radius: 0%;
-    }
+}
+@media (max-width: 600px) {
+  .tasks {
+    padding: 2rem 0rem;
+    min-width: 40rem;
   }
+  .tasks-heading {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .tasks-heading h1 {
+    margin-top: 2rem;
+  }
+  .task,
+  .tasks-title {
+    border-radius: 0%;
+  }
+}
