--- a/frontend/src/components/memberItem.module.css
+++ b/frontend/src/components/memberItem.module.css
@@ -7,12 +7,19 @@
   min-width: 22rem;
   flex: 1 1 25%;
 }
-.member img {
-  width: 7rem;
-  border-radius: 50%;
-  display: block;
+
+.image {
   grid-row: 1/3;
+  width: 7rem;
+  height: 7rem;
+  border-radius: 50%;
+  overflow: hidden;
   margin-right: 1rem;
+}
+.member img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
 }
 
 .member h4 {
