The member image css (create a div and insert the image inside)

--- a/frontend/src/components/footer.module.css
+++ b/frontend/src/components/footer.module.css
@@ -6,6 +6,7 @@ footer {
     font-size: 1.3rem;
     background-color: var(--color-secondary);
     color: var(--color-grey-light-1);
+    padding-top: 1rem;
 
   }
 
