--- a/frontend/src/components/header.module.css
+++ b/frontend/src/components/header.module.css
@@ -46,19 +46,7 @@
   font-size: 1.8rem;
 }
 
-.admin {
-  font-size: 1.8rem;
-  display: flex;
-  color: var(--color-grey-light-1);
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
 
-.admin svg {
-  margin-right: .5rem;
-  filter: invert(94%) sepia(30%) saturate(4767%) hue-rotate(182deg) brightness(122%) contrast(94%);
-}
 .image {
   width: 4rem;
   height: 4rem;
@@ -88,6 +76,64 @@
 
 .logout svg {
   margin-right: 5px;
+}
+
+.admin {
+  font-size: 1.8rem;
+  display: flex;
+  color: var(--color-grey-light-1);
+  background-color: transparent;
+  border: 1px solid var(--color-primary);
+  cursor: pointer;
+  align-items: center;
+  padding: 0rem 1rem;
+}
+
+.admin svg {
+  margin-right: 0.5rem;
+  filter: invert(94%) sepia(30%) saturate(4767%) hue-rotate(182deg)
+    brightness(122%) contrast(94%);
+    font-size: 3rem;
+}
+
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: none;
+  outline: none;
+}
+
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+select {
+  color: var(--color-grey-light-1);
+  width: 13rem;
+  cursor: pointer;
+  padding: 1rem;
+  background-color: var(--color-secondary);
+  font-size: 1.8rem;
+}
+
+.select::after {
+  content: '\25BC';
+  position: absolute;
+  top: -0.5rem;
+  right: 0;
+  background: var(--color-secondary);
+  pointer-events: none;
+  padding: 1rem;
+  transition: all 0.5s ease;
+}
+
+.select:hover::after {
+  background: var(--color-primary);
+  color: var(--color-grey-light-1);
 }
 
 @media (max-width: 600px) {
